--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ FORWARD_APP_PORT=8080
 FORWARD_MONGO_EXPRESS_PORT=8081
 MONGO_FORWARD_PORT=0
 
+SERVER_PORT=8080
+
 MONGO_DATABASE=headlinesbr
 MONGO_USERNAME=root
 MONGO_PASSWORD=farofa
