--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   app:
     build:
       context: .
-    restart: unless-stopped
+    restart: "no"
     command:
       - bash
       - -c
@@ -20,8 +20,8 @@ services:
       SERVER_PORT: ${SERVER_PORT:-8080}
       MONGO_DATABASE: ${MONGO_DATABASE:-headlinesbr}
       MONGO_HOST: ${MONGO_HOST:-mongo:27017}
-      MONGO_USERNAME: ${MONGO_USERNAME:-root}
-      MONGO_PASSWORD: ${MONGO_PASSWORD:-farofa}
+      MONGO_USERNAME: ${MONGO_USERNAME}
+      MONGO_PASSWORD: ${MONGO_PASSWORD}
     volumes:
       - ./:/go/src/app
     ports:
@@ -40,9 +40,9 @@ services:
     ports:
       - ${MONGO_FORWARD_PORT:-0}:27017
     environment:
-      MONGO_INITDB_DATABASE: ${MONGO_DATABASE:-headlinesbr}
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME:-root}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-farofa}
+      MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
 
   mongo-express:
     image: mongo-express
@@ -54,5 +54,5 @@ services:
     ports:
       - ${FORWARD_MONGO_EXPRESS_PORT:-8081}:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USERNAME:-root}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD:-farofa}
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
