Update Golang to 1.19; Fix docker-compose add environment SERVER_PORT to match container port; Using the fastest JSON Encoder alive goccy/go-json;

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - ./:/go/src/app
     ports:
-      - ${FORWARD_APP_PORT:-8080}:8080
+      - ${FORWARD_APP_PORT:-8080}:${SERVER_PORT:-8080}
     depends_on:
       - mongo
   mongo:
